--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "movies-explorer-api",
   "version": "1.0.0",
   "description": "backend",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint .",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -17,5 +18,17 @@
   "bugs": {
     "url": "https://github.com/nargisi/movies-explorer-api/issues"
   },
-  "homepage": "https://github.com/nargisi/movies-explorer-api#readme"
+  "homepage": "https://github.com/nargisi/movies-explorer-api#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "express": "^4.18.2",
+    "mongoose": "^6.6.5",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
