--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
   },
   "homepage": "https://github.com/nargisi/movies-explorer-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "celebrate": "^15.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-winston": "^4.2.0",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.2",
-    "mongoose": "^6.6.5",
-    "validator": "^13.7.0"
-  },
-  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
